examples/test/testpolicy18453.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18453
  namespace: namespace265
spec:
  podSelector:
    matchLabels:
      key0: value30
      key28: value10
      key3: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value24
          key34: value41
      podSelector:
        matchLabels:
          key40: value4
